--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-helmet": "^6.1.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "storybook": "^8.3.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
